--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ header {
   color: white;
   margin-left: 24px;
 }
+
+nav {
+  align-self:center
+}
+
+
 /* Page Titles, logo-img, input & arrow   */
 .beanMachineTitle {
   font-size: 80px;
